left and right button

--- a/index.html
+++ b/index.html
@@ -89,6 +89,22 @@
         </div>
       </div>
     </div>
+    <div class="left">
+      <img
+        src="./images/caret-left-fill.svg"
+        class="icons"
+        style="left: 0%"
+        onclick="left()"
+      />
+    </div>
+    <div class="right">
+      <img
+        src="./images/caret-right-fill.svg"
+        class="icons"
+        style="left: 96.85vw"
+        onclick="right()"
+      />
+    </div>
 
     <script src="./index.js"></script>
   </body>
