--- a/index.html
+++ b/index.html
@@ -101,11 +101,61 @@
       <img
         src="./images/caret-right-fill.svg"
         class="icons"
-        style="left: 96.85vw"
+        style="left: 95.55vw"
         onclick="right()"
       />
     </div>
 
+    <!-- mini carasole -->
+    <div class="mini_main">
+      <div class="parent">
+        <div class="i">
+          <img src="./images/1.jpg" class="mini_img" id="0" />
+        </div>
+        <div class="i">
+          <img src="./images/2.jpg" class="mini_img" id="1" />
+        </div>
+        <div class="i">
+          <img src="./images/3.jpg" class="mini_img" id="2" />
+        </div>
+        <div class="i">
+          <img src="./images/4.jpg" class="mini_img" id="3" />
+        </div>
+        <div class="i">
+          <img
+            src="./images/5.jpg"
+            class="mini_img"
+            id="4"
+            style="margin-right: 10px"
+          />
+        </div>
+      </div>
+      <div class="leftminiL">
+        <img src="./images/caret-left-fill.svg" class="iconsmini" />
+      </div>
+      <div class="rightminiR">
+        <img
+          src="./images/caret-right-fill.svg"
+          class="iconsmini"
+          style="left: 82%"
+        />
+      </div>
+    </div>
+
+    <div class="bodymain">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae
+      fugit sequi sapiente quam, est, autem nesciunt provident ipsa delectus
+      placeat suscipit. Repudiandae tenetur mollitia maxime adipisci ea
+      voluptates repellat voluptatem architecto vel quidem harum, libero,
+      veritatis vitae numquam fugiat sapiente! Aperiam similique quibusdam
+      pariatur iusto, maiores magnam quos harum, quis, est animi incidunt
+      repellendus vel adipisci nostrum voluptates! Placeat voluptatem, harum aut
+      cumque molestias illo architecto. Enim vero doloremque velit libero
+      nesciunt ipsam facilis pariatur accusantium, voluptatum eligendi
+      laudantium ad quae facere voluptates vitae quas assumenda repudiandae
+      reprehenderit, modi ipsum, adipisci magni? Eveniet culpa obcaecati
+      pariatur molestiae temporibus. Fuga, in?
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
